Fixing alignment of units in info request count and response time info boxes

--- a/features/org.wso2.carbon.analytics.http.feature/src/main/capp/GadgetRequestInfoBox_1.0.0/req-info-box/css/custom.css
+++ b/features/org.wso2.carbon.analytics.http.feature/src/main/capp/GadgetRequestInfoBox_1.0.0/req-info-box/css/custom.css
@@ -411,7 +411,6 @@ small.measure-label {
     position: absolute;
     z-index: 50;
     left: 24px;
-    top: 47%;
 }
 
 .panel-two i, .panel-three i, .panel-four i {
